# Mega-Sena_Api-Rest.

./: .env.example  .gitignore  Insomnia_2021-04-16  README.MD  config.py  pyproject.toml  requirements.txt  run.sh
app/: __init__.py
app/configurations/: authentication.py  database.py  serializer.py  views.py
app/models/: gamer_model.py  user_model.py
app/schema/: __init__.py  gamer_schema.py  user_schema.py
app/services/: compare_string_services.py  game_services.py  message_services.py  webscrapping_bot_services.py
app/views/: __init__.py  access_view.py  games_view.py  user_view.py
migrations/versions/: 7f185a968722_user_model_created.py  8b1098fe314a_create_gamer_model_created.py  d40f88a51bd3_adjust_gamemodel_for_new_params.py  ea968bcbf00d_add_unique_attribute_to_email_param.py  ebd10de5e37f_create_gamer_and_user_model.py
tests/: conftest.py  test_routes.py
