[tool.poetry]
name = "teste_ioasys"
version = "0.1.0"
description = ""
authors = ["Alexandre Alfa <Profissional@alexandrealfa.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
