[tool.poetry]
name = "teste_ioasys"
version = "0.1.0"
description = ""
authors = ["Alexandre Alfa <Profissional@alexandrealfa.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-dotenv = "^0.17.0"
Flask-JWT-Extended = "^4.1.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^2.7.0"
flask-marshmallow = "^0.14.0"
Flask-RESTful = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
